[package]
name = "rust_gui_iced_introduction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["async-std"] }
iced_native = "0.4"
iced_futures = "0.3"
async-std = "1.11"
